# porus

./: .gitignore  .travis.yml  AOJ.md  Cargo.toml  LC.md  README.md  c.py  install-lint.sh  ixcfg.py  requirements.txt
.cargo/: config
examples/AOJ/ITP1/: ITP1_3_B.rs
examples/LC/: 1-two-sum.rs  29-divide-two-integers.rs
examples/leetcode.com/: 1-two-sum.rs  two-sum.rs
porus_macros/: Cargo.toml  common.rs  format.rs  lib.rs
solutions/AOJ/ALDS1/: ALDS1_1_A.rs  ALDS1_2_A.rs  ALDS1_2_B.rs  ALDS1_2_C.rs  ALDS1_2_D.rs  ALDS1_3_A.rs  ALDS1_3_B.rs  ALDS1_4_A.rs  ALDS1_4_B.rs  ALDS1_6_B.rs  ALDS1_6_C.rs  ALDS1_9_B.rs  ALDS1_9_C.rs
solutions/AOJ/ITP1/: ITP1_10_A.rs  ITP1_1_A.rs  ITP1_1_B.rs  ITP1_1_C.rs  ITP1_1_D.rs  ITP1_2_A.rs  ITP1_2_B.rs  ITP1_2_C.rs  ITP1_2_D.rs  ITP1_3_A.rs  ITP1_3_C.rs  ITP1_3_D.rs  ITP1_4_A.rs  ITP1_4_B.rs  ITP1_4_C.rs  ITP1_4_D.rs  ITP1_5_A.rs  ITP1_5_B.rs  ITP1_5_C.rs  ITP1_5_D.rs  ITP1_6_A.rs  ITP1_7_A.rs  ITP1_9_D.rs
solutions/AOJ/ITP2/: ITP2_1_A.rs  ITP2_1_B.rs  ITP2_1_C.rs  (+12 more)
src/: alloc.rs  allocator.rs  array.rs  block.rs  buffer.rs  capacity.rs  chunk.rs  collection.rs  deque.rs  dheap.rs  dlist.rs  excess.rs  file.rs  flist.rs  fmt.rs  heap.rs  io.rs  lib.rs  libc.rs  math.rs  os.rs  pool.rs  prelude.rs  ptr.rs  scan.rs  stack.rs  static_array.rs  stdio.rs  stream.rs  string.rs  tests.rs  utils.rs
src/io/: mod.rs  read.rs  slice.rs  stdio.rs  write.rs
src/list/: index.rs  iter.rs  mod.rs  search.rs  slice.rs  sort.rs  sorting.rs
src/os/: alloc.rs  file.rs  mod.rs
src/string/: buffer.rs  mod.rs
tests/: drop.rs  pool.rs
(+56 files in other folders)
