[package]
name = "porus_macros"
description = "porus macros"
version = "0.0.0"
authors = ["bhuztez <bhuztez@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0.3"
quote = "1.0.2"

[dependencies.syn]
version = "1.0.5"
features = ["full"]
